# mnml-aws-cloudwatch-logs

./: Cargo.toml
src/: app.rs  blit.rs  config.rs  keys.rs  log_tail.rs  main.rs  theme.rs  ui.rs
