[package]
name = "mnml-aws-cloudwatch-logs"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "AWS CloudWatch Logs live tail viewer for mnml — terminal TUI with tabbed log groups, per-line severity coloring, filter patterns, console link. Runs standalone or as an mnml-hosted pane. Shells out to the `aws` CLI; no SDK dep."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-aws-cloudwatch-logs"
readme = "README.md"

[[bin]]
name = "mnml-aws-cloudwatch-logs"
path = "src/main.rs"

[dependencies]
mnml-bridge = "0.1"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
